--- a/q1/q1.html
+++ b/q1/q1.html
@@ -9,6 +9,26 @@
     <h1>Quizzer</h1>
     <h2>Question 1</h2>
     <h3>Place the city name on the correct location on the map in less than a minute</h3>
+    <ul class="options">
+		<li class="city" data-target="dimona">Dimona</li>
+		<li class="city" data-target="jerusalem">Jerusalem</li>
+		<li class="city" data-target="ashdod">Ashdod</li>
+		<li class="city" data-target="ashkelon">Ashkelon</li>
+		<li class="city" data-target="beitShemesh">Beit Shemesh</li>
+        <li class="city" data-target="haifa">Haifa</li>
+        <li class="city" data-target="herz">Herzeliya</li>
+        <li class="city" data-target="kiryatShmona">Kiryat Shmona</li>
+        <li class="city" data-target="nahariyya">Nahariyya</li>
+        <li class="city" data-target="netanya">Netanya</li>
+        <li class="city" data-target="tzfat">Tzfat</li>
+        <li class="city" data-target="tiberias">Tiberias</li>
+        <li class="city" data-target="ofakim">Ofakim</li>
+        <li class="city" data-target="raanana">Ra'anana</li>
+        <li class="city" data-target="rahat">Rahat</li>
+        <li class="city" data-target="rehovot">Rehovot</li>
+        <li class="city" data-target="beer">Be'er Sheva</li>
+        <li class="city" data-target="tlv">Tel Aviv-Yafo</li>
+	</ul>
     <script src=q1.js></script>
 </body>
 </html>
