--- a/index.html
+++ b/index.html
@@ -9,30 +9,31 @@
 
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Hackathon Project</title>
-<style type="text/css">
-    body {
-    font-family: 'Open Sans', sans-serif;
-}
-</style>
-
+<style type="text/css"></style>
   </head>
   <body>
 
-<div class="card bg-dark text-white">
+
+<div class="card bg-dark text-white" style="opacity: 0.1;" id="page">
   <img src="logo5.jpeg" class="card-img" alt="..." height="820">
   <div class="card-img-overlay" style="text-align: center;">
     <h1 class="card-title">AC HASMO</h1>
     <h4 class="card-text">D.I.HACKATHON WINNERS 2020</h4>
     <h4 class="card-text">BE PREPARED TO BE AMASED</h4>
-     <a href="question.2.html"><button type="button" class="btn btn-dark btn-lg btn-block">Enter if you dare....</button></a> 
+     <a href="question.2.html"><button type="button" id="btn" class="btn btn-dark btn-lg btn-block">Enter if you dare....</button></a> 
   </div>
 </div>
 
 
+<div class="card-img-overlay" id="username_banner">
+    <p">To move onto the game please type in your username</p>
+    <input type="text" name="username" placeholder="username">
+    <input type="submit" name="btn" id="button">
+</div>
 
 
 
-
+    <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
