--- a/question.4.html
+++ b/question.4.html
@@ -1,19 +1,30 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="question4.css">
 
     <title>Question 4</title>
   </head>
   <body>
-
+<div>
 <h1>Question 4</h1>
+</div>
 
 
+    <div class="container" id="container" style="text-align: center; position:relative;">
+      <div id="blue"></div>
+      <div id="blue"></div>
+      <div id="blue"></div>
+      <div id="blue"></div>
+      <div id="blue"></div>
+      <div id="blue"></div>
+      <div id="blue"></div>
+
+    </div>
 
     <script src="question4.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
