--- a/q1/q1.html
+++ b/q1/q1.html
@@ -35,11 +35,11 @@
 					</div>
 				  </nav>
 	  
-<!-- partial:index.partial.html -->
+
 <div class="quiz-wrapper">
 	<p class="question-description">Order the cities by population size</p>
 	<ul class="options">
-		<li class="title">Cities</li>
+		<li class="title">Cities:</li>
 		<li class="option" data-target="tokyo">Tokyo</li>
 		<li class="option" data-target="delhi">Delhi</li>
 		<li class="option" data-target="shanghai">Shanghai</li>
@@ -48,12 +48,7 @@
 		<li class="option" data-target="tlv">Tel Aviv</li>
 	</ul>
 <div class="answers">
-	<!-- <div class="target" data-accept="tokyo"></div>
-	<div class="target" data-accept="delhi"></div>
-	<div class="target" data-accept="shanghai"></div>
-	<div class="target" data-accept="saopaolo"></div>
-	<div class="target" data-accept="mumbai"></div>
-	<div class="target" data-accept="tlv"></div> -->
+
 	<ol>
 		<li><span class="target" data-accept="tokyo">&nbsp;</span></li>
 		<li><span class="target" data-accept="delhi">&nbsp;</span></li>
@@ -70,16 +65,18 @@
    <p>Well Done!</p>
  </div>
  <div class="status deny">
-   <p>Answers Remain</p>
+   <p>You haven't finished yet!</p>
  </div>
 </div>
 <div class="next">
-	<a href="index.html"><button type="button" id="btn" class="btn btn-primary">Next Question</button></a> 
+	<a href="../q2/question2.html"><button type="button" id="btn" class="btn btn-primary">Next Question</button></a> 
 </div>
 
+<!-- audio -->
+<audio src="../song.mp3" autoPlay loop/>
 
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js'></script><script  src="./q1.js"></script>
 
