--- a/homepage/index.html
+++ b/homepage/index.html
@@ -39,11 +39,10 @@
     <div class="hero-image">
         <div class="hero-text">
           <h1>Welcome to our quiz!</strong></h1>
-           <a href="q1.html"><button type="button" id="btn" class="btn btn-primary">Start now!</button></a> 
+           <a href="../q1/q1.html"><button type="button" id="btn" class="btn btn-primary">Start now!</button></a> 
         </div>
       </div>
-      <iframe src="song.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
-    </audio>  
+      <audio src="../song.mp3" autoPlay loop/>
       
     </div>
    
