bug fixes and added css

--- a/q2/q2.html
+++ b/q2/q2.html
@@ -38,18 +38,22 @@
     .data{
         text-align: center;
     }
+    .roundName{
+           text-align: center;
+       }
+      
     </style>
   </head>
   <body>
 <img src="option1.png">
 <div class="card-img-overlay" id="intro_banner">
-    <h1>Round 2</h1>
+    <h1 class="roundName">Round 2</h1>
     <p>Congratulations on reaching round 2!</p>
     <p>In this round you will need to input the number you see on the screen</p>
     <p>Get ready, because the number will be gone in the blink of an eye</p>
     <button class="btn btn-warning" id="bannerbtn">Go!</button>
 </div>
-
+<h1 class="roundName">Round 2</h1>
 <section class="page">
 <div class="data">
     <label>Enter the number displayed on the screen</label>
@@ -70,7 +74,7 @@
 
 <div class="card-img-overlay" id="next_banner" style="display: none">
     <h1>Congratulations on finishing round 2!</h1>
-    <a href="../q3/q3.html"></a><button class="btn btn-warning" id="nextbtn">Next!</button></a>
+    <a href="../q3/q3.html"><button class="btn btn-warning" id="nextbtn">Next!</button></a>
 </div>
 
     <audio src="../song.mp3" autoPlay loop/>
