--- a/q4/question4.html
+++ b/q4/question4.html
@@ -10,7 +10,7 @@
     <title>Question 4</title>
   </head>
   <body>
-
+    <h1 class="roundName">Round 4</h1>
 <img src="option1.png">
 
 <div class="card-img-overlay" id="intro_banner">
@@ -64,7 +64,7 @@
 
 <div class="card-img-overlay" id="next_banner" style="display: none">
     <h1>Congratulations on finishing round 4!</h1>
-    <a href="../credits/credits.html"></a><button class="btn btn-warning" id="nextbtn">Next!</button></a>
+    <a href="../credits/credits.html"><button class="btn btn-warning" id="nextbtn">Next!</button></a>
 </div>
     <audio src="../song.mp3" autoPlay loop/>
     <script src="question4.js"></script>
