--- a/q1/q1.html
+++ b/q1/q1.html
@@ -7,34 +7,47 @@
   <link rel="stylesheet" href="./q1.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-
+  <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 </head>
+
+<!-- CSS -->
+<style type="text/css">
+
+	img{    
+		content: "";
+		background: no-repeat center center fixed;
+		background-size: cover;
+		opacity: 0.2;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		position: absolute;
+		z-index: -1;
+		display: block;
+		height: 100%;
+		width: 100%;
+	}
+
+		#intro_banner, #next_banner{
+		background: grey;
+		text-align: center;
+		height: 400px;
+		width: 500px;
+		margin-left: 35%;
+	}
+
+	.data{
+		text-align: center;
+		margin-top: 20px;
+	}
+    .roundName{
+           text-align: center;
+       }
+	</style>
 <body class="hero-image">
-	            <!--Navbar-->
-				<nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
-					<div class="container">
-					  <a class="navbar-brand" href="#"><strong>AC Hasmo</strong></a>
-					  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					  </button>
-						  <div class="md-form my-0">
-							<div class="collapse navbar-collapse" id="navbarSupportedContent-7">
-							<ul class="navbar-nav mr-auto">
-								<li class="nav-item active">
-								  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-								</li>
-								<li class="nav-item active">
-								  <a class="nav-link" href="#">About</a>
-								</li>
-								<li class="nav-item active">
-								  <a class="nav-link" href="#">Why we're the best</a>
-								</li>
-							  </ul>
-							</div>
-					  </div>
-					</div>
-				  </nav>
-	  
+	<h1 class="roundName">Round 1</h1>
+	<img src="option1.png">
 
 <div class="quiz-wrapper">
 	<p class="question-description">Order the cities by population size</p>
@@ -69,7 +82,7 @@
  </div>
 </div>
 <div class="next">
-	<a href="../q2/question2.html"><button type="button" id="btn" class="btn btn-primary">Next Question</button></a> 
+	<a href="../q2/q2.html"><button class="btn btn-warning" id="nextbtn">Next!</button></a>
 </div>
 
 <!-- audio -->
