--- a/credits/credits.html
+++ b/credits/credits.html
@@ -42,8 +42,8 @@ img{
         <p>Smiley face</p>
         <h3>Honary mentions</h3>
         <p>class mates, especially Tali</p>
-        <h3>more list</h3>
-        <p>to make this look more impressive</p>
+        <h3>Mushkie Meyer</h3>
+        <p>Advisor</p>
     </div>
 
     <script src="credits.js"></script>
